style.css
/*
Theme Name: cnclassifieds
Author: Simon & Sophia
Description: cnclassifieds
Version: 1.0.1
Text Domain: cnclassifieds
*/
*{font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,STXihei,
	Noto Sans CJK SC,WenQuanYi Micro Hei,Arial,sans-serif,Droid Sans;
}
html, body{
	height: 100%;
	font-size: 16px;
    font-weight: 300;
    background-color: #f4f4f4;
}
p{
	word-break: break-all; 
}
.fa{
	color:#F26420;
}
h2:after {
    display: block;
    height: 2px;
    background-color: #F26522;
    content: " ";
    width: 100px;
    margin: 0;
    margin-top: 15px;
}
/*-------- site & header & footer --------*/
.site-content{
	min-height: 100%;
	padding-bottom: 122px;
}
.home{
	padding: 0;
	margin: 0;
}
.label{
	color: black !important;
}
.site-header{
	background-color:#F26522;
    padding:5px 0;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 100;
}
.first-header{
    min-height: 40px;
    text-align: center;
}
.first-header .fa{
    color: white;
}
.first-header .fa:hover{
    color: black;
}
.back-button, .search-button{
	text-decoration: none;
    float: left;
	width: 40px;
	height: 40px;
	font-size: 24px;
	border-width: 0;
    padding: 0;
    background-color:#F26522;
    text-align: center;
    vertical-align: middle;
}
.back-button:hover, .search-button:hover{
    background-color: #F26000;;
}
.search-button{
    float: right;
}
.header-logo{
    display: inline-block;
    padding-top: 3px;
}
.header-logo img{
    /*margin-top: 5px;*/
    height: 35px;
    margin: 0 auto;   
}
.index-header{
	padding-top:5px;
	background-color: #E2E0E3;
    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0,-0.3)),to(rgba(0, 0, 0, 0.2))),url(img/header-photo.png);
    background-image: linear-gradient(rgba(0, 0, 0,-0.3),rgba(0, 0, 0, 0.2)),url(img/header-photo.png);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
.home-hearder-container{
	min-height: 500px;
}
@media (max-width: 991px) {
	.home-hearder-container{
        min-height: 400px;
        background-position: center top;
	}
}
@media (max-width: 767px) {
	.home-hearder-container{
        min-height: 350px;
        background-position: center;
        background-size: 100%;
	}
}
.site-footer{
	background-color: #333;
	color: white;
	padding-top: 20px;
	margin-top: -122px;
	bottom: 0;
}
.site-footer span, .site-footer p{
	color:white;
}
/*-------- pagination --------*/
.page-numbers {
    display: block;
    float: left;
    padding: 3px 9px 3px 9px;
    margin-right: 3px;
    color: #F26522;
    background: #FFF;
    border-radius: 5px;
    border: solid 1px;
    font-weight: bold;
}
span.page-numbers.current {
    color: #FFF;
    background-color: #F26522;
    border: solid 1px #F26522;
}
a.page-numbers:hover,
a.page-numbers:focus {
    color: #FFF;
    background-color: #F26522;
    border: solid 1px #F26522;
}
/*-------- home.php --------*/
.home-logo{
	max-width:40%;
	max-height:40%;
    margin: 20px auto 125px auto;
}
@media (max-width: 767px) {
    .home-logo{
		max-width:80%;
		max-height:80%;
		display: block;
        margin: 0 auto;
    }
}
.home-logo-container{
	margin-bottom: 40px;
	margin-top: 20px;
}
.center-content{
	text-align: center;
}
.home-cate-logo{
	max-height: 80px;
	max-width: 100%;
}
.cate-row{
	margin-top: 30px;
    margin-bottom: 30px;
}
.cate-row h4{
	margin: 15px -15px;
	font-size: 18px;
}
.cate-section{
    margin-bottom: -30px;
}
@media (max-width: 767px) {
    .cate-row h4{
        font-size: 15px;
    }
}
.cate-row p{
	margin: 2px 0px;
}
.cate-col{
    margin-bottom: 30px;
}
.cate-col a{
    color: black;
}
/*-------- cate-tab --------*/ 
#accordion{
	margin-top: 20px;
}
#accordion .panel{
    border: none;
    border-top: 1px solid #e8e8e8;
    -webkit-box-shadow: none;
    box-shadow: none;
    border-radius: 0;
    margin: 0;
}
#accordion .panel:last-child{
    border-bottom: 1px solid #e8e8e8;
}
#accordion .panel-heading{
    padding: 0;
}
#accordion .panel-title a{
	text-decoration: none;
    outline: none;
    display: block;
    font-size: 16px;
    font-weight: bold;
    line-height: 24px;
    color: #635858;
    background: #fff;
    padding: 6px 1px 5px 37px;
    position: relative;
    -webkit-transition: all 0.5s ease 0s;
    transition: all 0.5s ease 0s;
}
#accordion .panel-title a:before{
    content: "\f0d7";
	font-family: 'FontAwesome';
	color: #F26522;
    display: block;
    width: 30px;
    height: 30px;
    line-height: 32px;
    font-size: 14px;
    text-align: center;
    position: absolute;
    top: 1px;
    left: 0;
    -webkit-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}
#accordion .panel-title a.collapsed:before{
    content: "\f0da";
}
#accordion .panel-body{
    font-size: 15px;
    color: #635858;
    line-height: 25px;
    border: none;
    padding: 1px 20px 1px 20px;
}
.selected-item{
    color: #F26522;
    font-weight: 900;
}
/*-------- result && result list --------*/
.screen-reader-text{
	display: none;
}
.listing-pagination{
	text-align:center;
}
.basic-listing{
	background: #fff;
    font-size: 15px;
    -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    letter-spacing: -.21px;
	margin: 5px -5px;
	padding: 0 10px;
}
.listed-header .listed-logo{
	text-align:center;
    padding-left: 0;
    padding-right: 10px;
}
.listed-logo img{
	max-width: 100%;
	max-height: 60px;
	width: auto;
	height: auto;
	margin-left: auto;
    margin-right: auto;
}
.listed-header{
	margin-top:15px;
	margin-bottom: 5px;
}
.listed-header .entry-title{
	margin-top: 5px;
}
.listed-decoration{
	height: 25px;
	margin:0 10px;
    float: left;
}
.listed-contact p{
	margin:5px 0;
	min-height: 32px;
	vertical-align: middle;
}
.listed-address-decoration{
	margin-top:15px;
	margin-bottom: 10px;
	max-width:100%;
	display: block;
	height: 40px;
	margin-left: auto;
    margin-right: auto;
}
.show-search-query h4{
	padding: 10px 20px;
}
.search-no-result{
    padding: 10px 10px;
    max-width: 100%;
    height: auto;
    margin: 0 auto;
}
.search-no-result-container{
    width: 100%;
    text-align: center;
    padding: 100px;
}
/* .gmw-no-results-wrapper p::after{
	content: ": 抱歉！我们没有找到你要的结果。";
} */
.site-main{
	margin-top:10px;
}
.listed-cate{
	margin-bottom: 10px;
	padding-left: 35px;
}
.listed-cate a{
	margin-left:10px;
	color: black;
}
.listed-contact .fa{
	margin: 0 20px;
	font-size: 20px;
}
/* .wpcf7-form label{
	width: 100%;
}
.wpcf7-form input[type=submit]{
	float: right;
} */
/* ------------ ICONS ------------------*/
.icon-small {
    display: inline-block;
    width: 30px;
    text-align: center;
    color: #0582d0;
    font-size: 120%;
    margin-right: 10px;
    line-height: 25px; 
}
.icon {
    display: inline-block;
    padding-left: 20px;
    text-align: center;
    color: #F26522;
    font-size: 80%;
    margin-right: 10px;
    line-height: 25px;
}
/* ------------ LOGO ------------------*/
.logo {
    max-width: 75px;
    max-height: 75px;
    margin-top: 10px;
    margin-bottom: 20px;
    margin-right: 20px;
	float: right;
	width: auto;
    height: auto;
}
/*-------- COMPANY NAME --------*/
.company-name {
    font-weight: 400;
    margin: 0 -5px 10px -5px;
    font-size: 20px;
    background-color: #fff;
    /*text-transform: uppercase;*/
}
.title {
    padding-left: 15px;
    font-weight: 400;
}
.abstract {
    font-size: 15px;
    color: #868585;
    padding: 5px 15px;
}
.tag {
    font-size: 14px;
    color: #868585;
}
.tag a{
	padding-right: 5px;
}
/*-------- CONTACT --------*/
.ad-contact {
    padding-top: 10px;
    background-color: #fff;
    margin: 0 -5px 10px -5px;
    color: #0582d0;
    word-break: break-all;
}
.ad-contact span,
.icon-small {
    font-size: 17px;
}
/*-------- INFORMATION --------*/
.ad-information {
    padding: 10px 20px 15px 20px;
}
.information {
    background-color: #fff;
    color: #000;
    word-spacing: 5px;
    margin: 0 -5px 10px -5px;
}
/* Small phones: from 0 t0 480px */
@media only screen and (max-width: 480px) {
    .logo {
        margin: 0 auto;
        display: block;
        margin-top: 10px;
        margin-bottom: 0px;
        margin-right: auto;
        margin-left: auto;
        float: none;
    }   
    .title {
        margin-top: 15px;
        float: none;
        display: inline-block;
        font-weight: 500;
        font-size: 25px;
    } 
}
/* ------------ BOX-ROUND-SHADOW ------------------*/
.box-round-shadow {
    border-radius: 10px;
    -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
}
/* ------------ SEARCH-RESULT-BOX ------------------*/
.bg-warning {
    background-color: #fff;
    color: #656565;
    border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.1);
    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.1);
}
.bg-danger {
    background-color: #e6e6e6;
    color: #656565;
    min-height: 100px;
    border-radius: 5px;
    border: solid 1px;
    border-color: #d9d9d9;
}
/*-------- search-form --------*/
.search-form-container{
    position: relative;
    margin-bottom: 5px;
    margin-top: 5px;
}
#search-suggestion{
    max-height: 250px;
    overflow-y: auto;
    position: absolute;
    left: 15px;
    right: 15px;
    top: 40px;
    z-index: 999;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    background-color: #fff;
    border-radius: 2px;
    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,.12);
    box-shadow: 0 2px 4px rgba(0,0,0,.12);
}
.sugg-item:hover{
    background-color: rgba(198, 198, 198, 0.5);
}
.sugg-item {
    padding: 5px 0 5px 10px;
    font-weight: bolder;
    margin-bottom: 0;
}
.search-item{
    display: inline-block; 
}
@media only screen and (max-width: 767px) {
    .search-item{
    margin-bottom: 10px;
    }
}
.auto-map{
    display: inline-block;
}
.search-submit{
    float: right;
    left: -40px;
}
/*-------- ads --------*/
.cate-ad-container{
    margin-top: 20px;
}
.single-page-ad-container{
    margin-bottom: 10px;
}

